added email verify flow
